added pages - user: about, account

--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -121,6 +121,6 @@
     <value>Panel Admina</value>
   </data>
   <data name="hello" xml:space="preserve">
-    <value>Witaj Świecie!</value>
+    <value>Witaj w Profile Match!</value>
   </data>
 </root>
