--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -121,6 +121,6 @@
     <value>Admin Dashboard</value>
   </data>
   <data name="hello" xml:space="preserve">
-    <value>Hello World!</value>
+    <value>Welcome in Profile Match!</value>
   </data>
 </root>
