--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -123,4 +123,112 @@
   <data name="hello" xml:space="preserve">
     <value>Witaj w Profile Match!</value>
   </data>
+  <data name="First Name" xml:space="preserve">
+    <value>Imię</value>
+  </data>
+  <data name="Last Name" xml:space="preserve">
+    <value>Nazwisko</value>
+  </data>
+  <data name="Job Title" xml:space="preserve">
+    <value>Stanowisko</value>
+  </data>
+  <data name="What is impotrant to me at work" xml:space="preserve">
+    <value>Co jest dla mnie ważne w pracy</value>
+  </data>
+  <data name="What is important for me" xml:space="preserve">
+    <value>Co jest dla mnie ważne</value>
+  </data>
+  <data name="What are my goals" xml:space="preserve">
+    <value>Jakie są moje cele</value>
+  </data>
+  <data name="My other skills" xml:space="preserve">
+    <value>Moje inne umiejętności</value>
+  </data>
+  <data name="My hobbies" xml:space="preserve">
+    <value>Moje zainteresowania</value>
+  </data>
+  <data name="Save Changes" xml:space="preserve">
+    <value>Zapisz</value>
+  </data>
+  <data name="Add New" xml:space="preserve">
+    <value>Dodaj</value>
+  </data>
+  <data name="Categories" xml:space="preserve">
+    <value>Kategorie</value>
+  </data>
+  <data name="Name" xml:space="preserve">
+    <value>Imię</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>Opis</value>
+  </data>
+  <data name="Questions" xml:space="preserve">
+    <value>Pytania</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Edytuj</value>
+  </data>
+  <data name="Edit Category" xml:space="preserve">
+    <value>Edytuj Kategorie</value>
+  </data>
+  <data name="Add Question" xml:space="preserve">
+    <value>Dodaj Pytanie</value>
+  </data>
+  <data name="Actions" xml:space="preserve">
+    <value>Działania</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Szukaj</value>
+  </data>
+  <data name="Hover" xml:space="preserve">
+    <value>Rozszerz</value>
+  </data>
+  <data name="Dense" xml:space="preserve">
+    <value>Skup</value>
+  </data>
+  <data name="Bordered" xml:space="preserve">
+    <value>Obramowanie</value>
+  </data>
+  <data name="Striped" xml:space="preserve">
+    <value>Paski???</value>
+  </data>
+  <data name="Departments" xml:space="preserve">
+    <value>Działy</value>
+  </data>
+  <data name="Members" xml:space="preserve">
+    <value>Członkowie</value>
+  </data>
+  <data name="Administration" xml:space="preserve">
+    <value>Administracja</value>
+  </data>
+  <data name="People Administration" xml:space="preserve">
+    <value>Administracja Ludźmi</value>
+  </data>
+  <data name="Sort By" xml:space="preserve">
+    <value>Sortuj Według</value>
+  </data>
+  <data name="Department" xml:space="preserve">
+    <value>Dział</value>
+  </data>
+  <data name="Photo" xml:space="preserve">
+    <value>Zdjęcie</value>
+  </data>
+  <data name="Date Of Birth" xml:space="preserve">
+    <value>Data Urodzenia</value>
+  </data>
+  <data name="Birth Date" xml:space="preserve">
+    <value>Data Urodzenia</value>
+  </data>
+  <data name="Is Active" xml:space="preserve">
+    <value>Jest Aktywny</value>
+  </data>
+  <data name="Rows per page" xml:space="preserve">
+    <value>Pozycji na stronę</value>
+  </data>
+  <data name="Profile" xml:space="preserve">
+    <value>Profil</value>
+  </data>
+  <data name="Next people" xml:space="preserve">
+    <value>Następne osoby</value>
+  </data>
 </root>
