--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -393,4 +393,64 @@
   <data name="This is my Level" xml:space="preserve">
     <value>To jest mój Poziom</value>
   </data>
+  <data name="People Match" xml:space="preserve">
+    <value>People Match???</value>
+  </data>
+  <data name="Account" xml:space="preserve">
+    <value>Konto</value>
+  </data>
+  <data name="Logout" xml:space="preserve">
+    <value>Wyloguj</value>
+  </data>
+  <data name="Log out" xml:space="preserve">
+    <value>Wyloguj</value>
+  </data>
+  <data name="Dashboard" xml:space="preserve">
+    <value>Pulpit</value>
+  </data>
+  <data name="Manager" xml:space="preserve">
+    <value>Menadżer</value>
+  </data>
+  <data name="Sorry, there's nothing at this address." xml:space="preserve">
+    <value>Przepraszamy, pod tym adresem nic nie ma.</value>
+  </data>
+  <data name="Back to main site" xml:space="preserve">
+    <value>Powrót do strony głównej</value>
+  </data>
+  <data name="Select Users" xml:space="preserve">
+    <value>Wybierz Użytkowników</value>
+  </data>
+  <data name="Full Name" xml:space="preserve">
+    <value>Imię i nazwisko</value>
+  </data>
+  <data name="Is a need" xml:space="preserve">
+    <value>Zapotrzebowanie</value>
+  </data>
+  <data name="Items per page" xml:space="preserve">
+    <value>Pozycji na stronę</value>
+  </data>
+  <data name="Certificates" xml:space="preserve">
+    <value>Certyfikaty</value>
+  </data>
+  <data name="Cert name" xml:space="preserve">
+    <value>Nazwa certyfikatu</value>
+  </data>
+  <data name="File" xml:space="preserve">
+    <value>Plik</value>
+  </data>
+  <data name="Upload" xml:space="preserve">
+    <value>Załącz</value>
+  </data>
+  <data name="Add" xml:space="preserve">
+    <value>Dodaj</value>
+  </data>
+  <data name="Users" xml:space="preserve">
+    <value>Użytkownicy</value>
+  </data>
+  <data name="Statistics" xml:space="preserve">
+    <value>Statystyki</value>
+  </data>
+  <data name="You're not loggged in as Admin." xml:space="preserve">
+    <value>Nie jesteś zalogowany jako Administrator.</value>
+  </data>
 </root>
