added polish language to AdminCards

--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -231,4 +231,31 @@
   <data name="Next people" xml:space="preserve">
     <value>Następne osoby</value>
   </data>
+  <data name="Selection Page" xml:space="preserve">
+    <value>Strona wyboru</value>
+  </data>
+  <data name="Question 1" xml:space="preserve">
+    <value>Pytanie 1</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>Wyślij</value>
+  </data>
+  <data name="Question 2" xml:space="preserve">
+    <value>Pytanie 2</value>
+  </data>
+  <data name="Question 3" xml:space="preserve">
+    <value>Pytanie 3</value>
+  </data>
+  <data name="Question 4" xml:space="preserve">
+    <value>Pytanie 4</value>
+  </data>
+  <data name="Question 5" xml:space="preserve">
+    <value>Pytanie 5</value>
+  </data>
+  <data name="Choose the question you want to answer" xml:space="preserve">
+    <value>Wybierz pytanie, na które chcesz odpowiedzieć</value>
+  </data>
+  <data name="Max 150 characters" xml:space="preserve">
+    <value>Max 150 znaków</value>
+  </data>
 </root>
