--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -394,7 +394,7 @@
     <value>To jest mój Poziom</value>
   </data>
   <data name="People Match" xml:space="preserve">
-    <value>People Match???</value>
+    <value>People Match</value>
   </data>
   <data name="Account" xml:space="preserve">
     <value>Konto</value>
@@ -406,7 +406,7 @@
     <value>Wyloguj</value>
   </data>
   <data name="Dashboard" xml:space="preserve">
-    <value>Pulpit</value>
+    <value>Panel</value>
   </data>
   <data name="Manager" xml:space="preserve">
     <value>Menadżer</value>
@@ -452,5 +452,83 @@
   </data>
   <data name="You're not loggged in as Admin." xml:space="preserve">
     <value>Nie jesteś zalogowany jako Administrator.</value>
+  </data>
+  <data name=" Log out" xml:space="preserve">
+    <value>Wyloguj</value>
+  </data>
+  <data name="label" xml:space="preserve">
+    <value>etykieta</value>
+  </data>
+  <data name="Select All" xml:space="preserve">
+    <value>Zaznacz Wszystko</value>
+  </data>
+  <data name="Selected items" xml:space="preserve">
+    <value>Wybrane przedmioty</value>
+  </data>
+  <data name="Add Certificate" xml:space="preserve">
+    <value>Dodaj Certyfikat</value>
+  </data>
+  <data name="Hell" xml:space="preserve">
+    <value>Witaj</value>
+  </data>
+  <data name="Log in" xml:space="preserve">
+    <value>Zaloguj</value>
+  </data>
+  <data name="Profile Match" xml:space="preserve">
+    <value>Dopasowanie profilu</value>
+  </data>
+  <data name="Edit Answer" xml:space="preserve">
+    <value>Edytuj Pytanie</value>
+  </data>
+  <data name="Selected Values" xml:space="preserve">
+    <value>Wybrane Wartości</value>
+  </data>
+  <data name="Manager Dashboard" xml:space="preserve">
+    <value>Panel Menadżera</value>
+  </data>
+  <data name="Projects" xml:space="preserve">
+    <value>Projekty</value>
+  </data>
+  <data name="Compare" xml:space="preserve">
+    <value>Porównaj</value>
+  </data>
+  <data name="Sorry, this content is restricted." xml:space="preserve">
+    <value>Przepraszamy, ta zawartość jest ograniczona.</value>
+  </data>
+  <data name="User Dashboard" xml:space="preserve">
+    <value>Panel Użytkownika</value>
+  </data>
+  <data name="Surveys" xml:space="preserve">
+    <value>Ankiety</value>
+  </data>
+  <data name="About" xml:space="preserve">
+    <value>O mnie</value>
+  </data>
+  <data name="Cards" xml:space="preserve">
+    <value>Karty</value>
+  </data>
+  <data name="Selection Page" xml:space="preserve">
+    <value>Strona Wyboru</value>
+  </data>
+  <data name="Question 1" xml:space="preserve">
+    <value>Pytanie 1</value>
+  </data>
+  <data name="Question 2" xml:space="preserve">
+    <value>Pytanie 2</value>
+  </data>
+  <data name="Question 3" xml:space="preserve">
+    <value>Pytanie 3</value>
+  </data>
+  <data name="Question 4" xml:space="preserve">
+    <value>Pytanie 4</value>
+  </data>
+  <data name="Question 5" xml:space="preserve">
+    <value>Pytanie 5</value>
+  </data>
+  <data name="Choose the question you want to answer" xml:space="preserve">
+    <value>Wybierz pytanie, na które chcesz odpowiedzieć</value>
+  </data>
+  <data name="Max 150 characters" xml:space="preserve">
+    <value>Maksymalnie 150 znaków</value>
   </data>
 </root>
