--- a/ProfileMatch.Services/LanguageService.pl.resx
+++ b/ProfileMatch.Services/LanguageService.pl.resx
@@ -132,7 +132,7 @@
   <data name="Job Title" xml:space="preserve">
     <value>Stanowisko</value>
   </data>
-  <data name="What is impotrant to me at work" xml:space="preserve">
+  <data name="What is important to me at work" xml:space="preserve">
     <value>Co jest dla mnie ważne w pracy</value>
   </data>
   <data name="What is important for me" xml:space="preserve">
@@ -530,5 +530,8 @@
   </data>
   <data name="Max 150 characters" xml:space="preserve">
     <value>Maksymalnie 150 znaków</value>
+  </data>
+  <data name="Send" xml:space="preserve">
+    <value>Wyślij</value>
   </data>
 </root>
