--- a/ProfileMatch.Services/LanguageService.resx
+++ b/ProfileMatch.Services/LanguageService.resx
@@ -528,13 +528,31 @@
   <data name="Choose the question you want to answer" xml:space="preserve">
     <value>Choose the question you want to answer</value>
   </data>
-  <data name="Max 150 characters" xml:space="preserve">
-    <value>Max 150 characters</value>
+  <data name="Max 200 characters" xml:space="preserve">
+    <value>Max 200 characters</value>
   </data>
   <data name="Send" xml:space="preserve">
     <value>Send</value>
   </data>
   <data name="Welcome to the employee portal, select the tab you want to enter" xml:space="preserve">
     <value>Welcome to the employee portal, select the tab you want to enter</value>
+  </data>
+  <data name="Answer added" xml:space="preserve">
+    <value>Answer added</value>
+  </data>
+  <data name="Answer updated" xml:space="preserve">
+    <value>Answer updated</value>
+  </data>
+  <data name="Operation cancelled" xml:space="preserve">
+    <value>Operation cancelled</value>
+  </data>
+  <data name="There was an error" xml:space="preserve">
+    <value>There was an error</value>
+  </data>
+  <data name="Select all text" xml:space="preserve">
+    <value>Select all text</value>
+  </data>
+  <data name="Edit note" xml:space="preserve">
+    <value>Edit note</value>
   </data>
 </root>
